# deep-experiments

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerrun.aws.json  Makefile  README.md  README.rst  cloud-requirements.txt  data.dvc  doc-requirements.txt  local-requirements.txt  requirements.txt  setup.py  streamlit-requirements.txt
.dvc/: config
.github/workflows/: create-endpoint.yml  documentation.yml  mlflow-environment.yml  offline-test-environment.yml  online-test-environment.yml  sectors-model.yml  test-environment.yml
deep/: constants.py  utils.py
docker/: Dockerfile.deployment  Dockerfile.mlflow  Dockerfile.offline_test_env  Dockerfile.online_test_env  Dockerfile.streamlit  Dockerrun-offline.aws.json  Dockerrun-online.aws.json  Dockerrun.aws.json
docs/source/: conf.py  index.rst
extractive-summarization/: README.md  config.json  environment.yml  evaluate.py  extract_pdfs.py  extract_websites.py  main.ipynb  mlflow_wrapper.py  model.py  new_training.py  prepare_data.py  train.py
extractive-summarization/configs/: aux_all.json  aux_all_1_separate.json  aux_other.json  aux_other_1_separate.json  aux_sector_fine_grained_balanced.json  aux_sector_fine_grained_uniform.json  aux_sectors.json  aux_sectors_1_separate.json  (+15 more)
extractive-summarization/utils/: Cargo.toml
extractive-summarization/utils/src/: lib.rs
reports_generator/: __init__.py  reports_generation.py
requirements/: cloud-requirements.txt  local-requirements.txt  offline-test-env-requirements.txt  streamlit-requirements.txt  test-env-requirements.txt
src/: __init__.py
(+502 files in other folders)
